I am resubmitting this task
.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
+<!doctype htmnl>
 <html lang="en">
 
 <head>
-    <title>My Title </title>
     <meta charset="utf-8">
-    <meta view="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="js/scripts.js" async></script>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>SIT 725 Prac 1</title>
+    <meta name="description" content= "Primary template for SIT 725 Prac 1">
+    <meta name="author" content="SitePoint">
+
+    <meta property="og:title" content="SIT 725 Prac 1">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="primary template for SIT 725 Prac 1">
+
+    <!-- Compiled and minified CSS -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    </head>
 
 <body>
-    <h3 class="text-center">SIT725 Applied Software Engineering</h3>
-    <p id="changetext" class="text-center">Click the button to change the text</p>
-    <button onclick="changeText()" class="text-center">Click Me To Change Text</button>
+    <div class="container">
+       <div class="row">
+            <div class="col s12">
+                <h1 id="heading" class="center-align">SIT 725</h1>
+            </div>
+            <div class="col s12 center-align">
+                 <a class="waves-effect waves-light btn" onclick="changeText()">Change Text</a>
+            </div>
+        </div>
+  </div>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
